
v6.6
(xx/04/18)

Changes / Improvements / Optimizations:
General | Removed minutely running "make_nas_processes_faster" cron job, which is present on some device base images, without any effect on raw DietPi: https://github.com/Fourdee/DietPi/issues/1654
DietPi-Cron | Added the ability to disable the new minutely cron job, if not needed, to reduce logs
DietPi-Boot | Dropbear: Adding ecdsa and dss host keys as well on 1st boot, to avoid boot error messages: https://github.com/Fourdee/DietPi/issues/1670
DietPi-Boot | Now executes "iw" and "amixer" only, if binaries exist, unhide command outputs instead.
DietPi-Boot | Now executes "ifup/down wlan0" only, if interface is configured, to avoid error message about it.
DietPi-Boot | Now adds sourcing of DietPi-Globals to /root/.bashrc, if missing, e.g. due to user edit.
DietPi-Boot | Various code improvements according to: https://github.com/Fourdee/DietPi/issues/1510
DietPi-Services | Start/Stop order is now based on service dependencies: https://github.com/Fourdee/DietPi/issues/1462
General | Removed minutely running "make_nas_processes_faster" cron job, which is present on some device base images, without any effect on raw DietPi: https://github.com/Fourdee/DietPi/issues/1654

Bug Fixes:
General | RPi: Resolved issue with updating 'raspberrypi-sys-mods', where the patch would incorrectly apply a new apt mirror, breaking the ability to update: https://github.com/Fourdee/DietPi/issues/1659#issuecomment-377297103
DietPi-Globals | G_RPI_UPDATE: Added APT hold state for "libraspberrypi0", to include all "raspberrypi-firmware" packages, that are overwritten by "rpi-update": https://github.com/Fourdee/DietPi/pull/1657
DietPi-Process_Tool | Deluge: Is now a SystemD service, which resolves failed process tool apply on forking deluge process: https://github.com/Fourdee/DietPi/issues/1658

-----------------------------------------------------------------------------------------------------------

v6.5
(28/03/18)
