@@ -502,13 +502,6 @@ _EOF_
 			#Our config must not start with '99-' to assure priority higher than '99-sysctl.conf'
 			mv /etc/sysctl.d/99-dietpi.conf /etc/sysctl.d/dietpi.conf &> /dev/null
 			#-------------------------------------------------------------------------------
-			#Remove firmware-misc-nonfree if firmware-linux-nonfree is not installed, not required for SBC's: https://github.com/Fourdee/DietPi/issues/1631
-			if (( ! $(dpkg --get-selections | grep -ci -m1 '^firmware-linux-nonfree') )); then
-
-				G_AGP firmware-misc-nonfree
-
-			fi
-			#-------------------------------------------------------------------------------
 			# - RPi resolve gettext error: https://github.com/Fourdee/DietPi/issues/1631#issuecomment-373965406
 			rm /etc/profile.d/wifi-country.sh &> /dev/null
 			#-------------------------------------------------------------------------------
@@ -597,6 +590,25 @@ _EOF_
 
 				[ -f /etc/dropbear/dropbear_ecdsa_host_key ] || dropbearkey -t ecdsa -f /etc/dropbear/dropbear_ecdsa_host_key &> /dev/null
 				[ -f /etc/dropbear/dropbear_dss_host_key ] || dropbearkey -t dss -f /etc/dropbear/dropbear_dss_host_key &> /dev/null
+
+			fi
+			#-------------------------------------------------------------------------------
+			#Reinstall firmware-misc-nonfree by default (ralink): https://github.com/Fourdee/DietPi/issues/1675
+			if (( $(dpkg --get-selections | grep -ci -m1 '^wpasupplicant') )); then
+
+				if (( $G_DISTRO == 3 )); then
+
+					G_AGI firmware-ralink
+
+				else
+
+					G_AGI firmware-misc-nonfree
+
+				fi
+
+			elif (( $G_HW_ARCH == 10 && $G_HW_MODEL != 20 )); then
+
+				G_AGI firmware-misc-nonfree
 
 			fi
 			#-------------------------------------------------------------------------------
