@@ -1,6 +1,9 @@
 
 v6.6
-(xx/04/18)
+(01/04/18)
+
+Image additions:
+Nintendo Switch: DietPi Image now available, includes GPU, Kodi and RetroPie support! Many thanks to Mrs April and Mr Fall.
 
 Changes / Improvements / Optimizations:
 General | Removed minutely running "make_nas_processes_faster" cron job, which is present on some device base images, without any effect on raw DietPi: https://github.com/Fourdee/DietPi/issues/1654
@@ -12,9 +15,12 @@ DietPi-Boot | Now adds sourcing of DietPi-Globals to /root/.bashrc, if missing, 
 DietPi-Boot | Various code improvements according to: https://github.com/Fourdee/DietPi/issues/1510
 DietPi-Services | Start/Stop order is now based on service dependencies: https://github.com/Fourdee/DietPi/issues/1462
 General | Removed minutely running "make_nas_processes_faster" cron job, which is present on some device base images, without any effect on raw DietPi: https://github.com/Fourdee/DietPi/issues/1654
+General | firmware-misc-nonfree is now installed by default for Native PC (x86_64) devices. Contains additional firmware for Intel CPU's.
+General | RPi: Disabled the ability to fry an egg on the RPi 3 CPU. CPU temps are now halved under load! Many thanks to Mrs April and Mr Fall.
 
 Bug Fixes:
 General | RPi: Resolved issue with updating 'raspberrypi-sys-mods', where the patch would incorrectly apply a new apt mirror, breaking the ability to update: https://github.com/Fourdee/DietPi/issues/1659#issuecomment-377297103
+General | firmware-misc-nonfree is now installed by default on all DietPi systems (minus those via PREP with WiFi disabled). Mostly Intel/Nvidia firmware, however, it also contains ralink WiFi firmware: https://github.com/Fourdee/DietPi/issues/1675#issuecomment-377806609
 DietPi-Globals | G_RPI_UPDATE: Added APT hold state for "libraspberrypi0", to include all "raspberrypi-firmware" packages, that are overwritten by "rpi-update": https://github.com/Fourdee/DietPi/pull/1657
 DietPi-Process_Tool | Deluge: Is now a SystemD service, which resolves failed process tool apply on forking deluge process: https://github.com/Fourdee/DietPi/issues/1658
 
